-testing using 3rd party lib iphone-inline-video.  seems to work on iphone

--- a/lib/package.json
+++ b/lib/package.json
@@ -4,7 +4,9 @@
   "description": "test33",
   "main": "index.js",
   "repository": {},
-  "dependencies": {},
+  "dependencies": {
+    "iphone-inline-video": "^1.7.4"
+  },
   "devDependencies": {
     "swfobject-npm": "^2.3.0-1"
   },
